[INJIWEB-1856] - Update description for claims attribute Update logic for sdClaims update Test cases for sdClaims
Signed-off-by: Durgesh Konga <kongadurgesh20@gmail.com>